Finished Correcting IUI Max Stack Error in forEach via moving jquery out of loop

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -26,6 +26,11 @@ div {
   width: 100vw;
 }
 
+p {
+  margin: 2px;
+  border: $alt-border;
+}
+
 .container {
   display: flex;
   align-content: stretch;
