Troubleshooting Update & Deletion succesful routes, should refresh table

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,14 +1,14 @@
 @import '~bootstrap/scss/bootstrap';
 
 $alt-color: $cyan;
-$bg-color: #c5fcdb;
+$bg-color: #B0F9F6;
 $font-color: #FFFFFF;
 $border-color: 1px #000000 double;
 $font-outline: #000000;
 $cell-dimensions: 98vw;
 $text-shadow: -1px -1px 0 $font-outline, 1px -1px 0  $font-outline, -1px 1px 0  $font-outline, 1px 1px 0  $font-outline;
-$alt-border: 3px #2dba86 ridge;
-$alt-bg-color: #e1f7ef;
+$alt-border: 3px #7175F4 ridge;
+$alt-bg-color: #060A6E;
 
 body  {
   border: 1px black solid;
