--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -2,17 +2,13 @@
 
 $alt-color: $cyan;
 $bg-color: #B0F9F6;
-$font-color: #FFFFFF;
+$font-color: #581845;
 $border-color: 1px #000000 double;
-$font-outline: #000000;
+$font-outline: #DDDDE3;
 $cell-dimensions: 98vw;
 $text-shadow: -1px -1px 0 $font-outline, 1px -1px 0  $font-outline, -1px 1px 0  $font-outline, 1px 1px 0  $font-outline;
-$alt-border: 3px #7175F4 ridge;
+$alt-border: 1px #7175F4 solid;
 $alt-bg-color: #060A6E;
-
-body  {
-  border: 1px black solid;
-}
 
 h1  {
   margin: 0 auto;
@@ -24,11 +20,6 @@ h1  {
 
 div {
   width: 100vw;
-}
-
-p {
-  margin: 2px;
-  border: $alt-border;
 }
 
 .container {
@@ -63,15 +54,23 @@ p {
   background: $bg-color;
   border: $border-color;
   color: black;
-  margin: 0 auto;
+  margin: 3px auto 0 auto;
   padding: 0 auto;
   width: 100%;
   align-items: center;
   text-align: center;
   flex-direction: row-reverse;
   align-content: center;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: nowrap;
+}
+
+p {
+  border: $alt-border;
+  padding: 3px;
+  background: $font-outline;
+  opacity: 80%;
+  margin: 0 auto;
 }
 
 #title {
@@ -81,8 +80,8 @@ p {
 #communication {
   display: flex;
   flex-flow: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
 }
 
 #FormFields {
@@ -91,4 +90,14 @@ p {
   justify-content: flex-end;
   align-items: flex-end;
   width: $cell-dimensions;
+}
+
+#secondLog {
+  border: none;
+  background: none;
+  margin: 0 0 0 10px;
+}
+
+#new-item, #masterLog {
+  margin: 0 0 0 10px;
 }
