Adding Flex Font Sizing to Input Fields and Buttons

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -117,4 +117,11 @@ p {
   background: $button-background;
   color: $button-font;
   margin: 2px;
+  font-size: 1vw;
+  width: 7vw;
+}
+
+input {
+  font-size: 1vw;
+  width: 7vw;
 }
