--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -117,11 +117,11 @@ p {
   background: $button-background;
   color: $button-font;
   margin: 2px;
-  font-size: 1vw;
-  width: 7vw;
+  font-size: .85vw;
+  width: 8vw;
 }
 
 input {
-  font-size: 1vw;
-  width: 7vw;
+  font-size: .95vw;
+  width: 10vw;
 }
